--- a/transporteEscolar.Infrastructure/transporteEscolar.Infrastructure.csproj
+++ b/transporteEscolar.Infrastructure/transporteEscolar.Infrastructure.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\transporteEscolar.Domain\transporteEscolar.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
