--- a/transporteEscolar.Application/transporteEscolar.Application.csproj
+++ b/transporteEscolar.Application/transporteEscolar.Application.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\transporteEscolar.Domain\transporteEscolar.Domain.csproj" />
+    <ProjectReference Include="..\transporteEscolar.Infrastructure\transporteEscolar.Infrastructure.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
